2017-09-21  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.c:
	  - SHIFT_FLAG64 macro is added.
	  - initial_vtmode_flags() is changed to INITIAL_VTMODE_FLAGS macro.
	  - RIS(ESC c) moves cursor to the upper left.

2017-09-19  Araki Ken  <arakiken@users.sf.net>

	* vt_parser.[ch]:
	  - VTMODE_20 macro and vt_parser_t::auto_cr are added to support LNM.
	  - Cursor is moved to left-upper cell by DECOLM.
	  - INITIAL_VTMODE_FLAGS macro is changed to initial_vtmode_flags() function
	    to process 64bit shift properly.
	  - soft_reset() resets options via set_vtmode().

2017-09-18  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: get_config_intern() supports "fontconfig" which dumps
	  current font settings.

	* ui_font_manager.h: ui_font_manager_dump_font_config() is added.

	* ui_font_config.[ch]:
	  - ui_get_all_config_font_names() => ui_get_config_font_names_all()
	  - ui_font_config_dump() is added.

	* vt_char.[ch]: vt_get_unicode_area() is added.

	* vt_font.h:
	  - FONT_WITHOUT_SIZE_ATTR() is removed.
	  - HAS_UNICODE_AREA() => UNICODE_AREA()

	* MLActivity.java: String {resume|pause}Native() => void {resume|pause}Native()

2017-09-17  Araki Ken  <arakiken@users.sf.net>

	* ui_screen.c: Common processing in get_spot() and get_im_spot() is separated to
	  get_spot_intern().

	* console/ui_font.c, console/ui_window.c:
	  - White spaces are inserted between ASCII characters in vertical mode.
	  - scroll_region() can scroll screen leftward or rightward.

	* vt_term.c: NOT_CONVERT_TO_ISCII macro which is defined on console and cocoa
	  disables CONVERT_UNICODE_TO_ISCII.

	* cocoa.m:
	  - cand_x and cand_y which stores the initial position of preediting
	    to determine the position of candidate window are added to MLTermView.
	  - font->x_off is reflected in drawUnistr().
	  - ui_screen_t::is_preediting = 1 in preediting.

	* quartz/ui_font.c: font->x_off is set in vertical mode.
